--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
@@ -37,7 +37,13 @@
                     <td>Electronics, sensors &#38; photonics, Materials</td>
                     <td>Ooba</td>
                     <td>01/09/2017</td>
-                    <td><a href="#">114-feedback.pdf</a> (opens in a new window)</td>
+                    <td>
+                        <div class="upload-section">
+                            <a class="uploaded-file-1" href="#" target="_blank">Uploaded-file.pdf</a>
+                            <p class="form-hint">(opens in a new window)</p>
+                            <!-- WE WILL NEED TO ADD CSS TO PRODUCTION CODE TO GET THIS LOOKING RIGHT. -->
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
