IFS-2779 Initial commit

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-send-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-send-invites.html
@@ -2,7 +2,7 @@
 
 <html class="no-js" lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Invite to assessment panel',hasFormErrors=${#fields.hasErrors('${form.*}')}" />
+    <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Invite to interview panel',hasFormErrors=${#fields.hasErrors('${form.*}')}" />
 </head>
 
 <body th:with="context='comp-management'" class="competition-management competition-overview">
@@ -17,14 +17,14 @@
         <th:block th:insert="fragments/elements :: error-summary-list(form)" />
     </div>
 
-    <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Invite assessors to attend',linkClass='link-back',linkUrl=@{/assessment/panel/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}" />
-    <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Invite assessors to panel',subTitle=${model.competitionName},size='heading-xlarge'" />
+    <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Invite assessors to attend',linkClass='link-back',linkUrl=@{/assessment/interview/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}" />
+    <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Invite assessors to interview panel',subTitle=${model.competitionName},size='heading-xlarge'" />
 
     <h2 class="heading-medium no-margin">Recipients</h2>
 
     <p th:text="${#strings.listJoin(model.recipients, ', ')}">Paul Plum, Felix Wilson</p>
 
-    <form th:action="@{/panel/competition/{competitionId}/assessors/invite/send(competitionId=${model.competitionId})}" method="post" enctype="multipart/form-data" th:object="${form}">
+    <form th:action="@{/interview/competition/{competitionId}/assessors/invite/send(competitionId=${model.competitionId})}" method="post" enctype="multipart/form-data" th:object="${form}">
         <div class="form-group extra-margin-bottom">
             <label class="form-label-bold" for="subject">Subject</label>
             <input class="form-control width-full" id="subject" type="text" th:field="*{subject}" />
@@ -53,7 +53,7 @@
 
         <div class="extra-margin">
             <button type="submit" class="button">Send invite</button>
-            <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}"
+            <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}"
                class="button button-clear">Cancel</a>
         </div>
 
