--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-invite.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-invite.html
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="column-half alignright" th:if="${!#lists.isEmpty(model.assessors)}">
-                        <a class="button disabled">Review and send invites</a>
+                        <a th:href="@{/interview/competition/{competitionId}/assessors/invite/send(competitionId=${model.competitionId})}" class="button">Review and send invites</a>
                     </div>
                 </div>
 
@@ -123,7 +123,7 @@
                             </td>
                         </tr>
                         <tr th:if="${#lists.isEmpty(model.assessors)}">
-                            <td colspan="5">There are no assessors to be invited to this panel.</td>
+                            <td colspan="5">There are no assessors to be invited to this interview panel.</td>
                         </tr>
                         </tbody>
                     </table>
