--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/layout.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/layout.html
@@ -113,7 +113,7 @@
             </div>
             <div class="header-proposition">
               <div class="content">
-                <a href="#proposition-links" class="js-header-toggle menu" th:if="${#authentication} ? ${#authorization.expression('isAuthenticated()')} : ${false}">Menu</a>
+                <a href="#proposition-links" class="js-header-toggle menu" th:unless="${hidePropositionLinks}">Menu</a>
 
                 <nav id="proposition-menu">
                     <div th:insert="fragments/elements :: header-links" th:with="hideDashboardLink=${hideDashboardLink}, hidePropositionLinks=${hidePropositionLinks}"></div>
