IFS-1947 added custom error messages and links to fields

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/declaration-of-interest-edit.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/declaration-of-interest-edit.html
@@ -14,7 +14,13 @@
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" data-ignore-errors="true" aria-labelledby="error-summary-heading" tabindex="-1">
               <h2 class="heading-medium error-summary-heading">We were unable to save your changes.</h2>
-              <p>Please correct the errors in the form below.</p>
+                <ul class="error-summary-list">
+                    <li th:each="err : ${#fields.detailedErrors('${form.*}')}">
+                        <th:block th:if="${err.global}" th:text="${err.message}">Non-field specific message</th:block>
+                        <!--/* Add a 1 to accurateAccount field name as it is a checkbox which increments the id's*/-->
+                        <a th:if="${err.fieldName}" th:href="|#${err.fieldName == 'accurateAccount' ? 'accurateAccount1' : err.fieldName}|" th:text="${err.message}">The error message</a>
+                    </li>
+                </ul>
             </div>
               <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Edit your declaration of interest',size='heading-xlarge extra-margin-bottom'" />
             <p>We need to record if you, or an immediate family member, is connected to a body which has any financial interests.</p>
@@ -127,6 +133,8 @@
                                     </label>
                                     <input aria-labelledby="aria-position-org" class="form-control width-full appointment-field" type="text"
                                            th:errorclass="form-control-error"
+                                           th:id="appointments[__${appointmentStat.index}__].organisation"
+                                           th:name="appointments[__${appointmentStat.index}__].organisation"
                                            th:field="*{appointments[__${appointmentStat.index}__].organisation}"
                                            required="required"
                                            th:attr="data-required-errormessage=#{validation.assessorprofileappointmentform.organisation.required}" />
@@ -142,6 +150,8 @@
                                     </label>
                                     <input aria-labelledby="aria-position-pos" class="form-control width-full appointment-field" type="text"
                                            th:errorclass="form-control-error"
+                                           th:id="appointments[__${appointmentStat.index}__].position"
+                                           th:name="appointments[__${appointmentStat.index}__].position"
                                            th:field="*{appointments[__${appointmentStat.index}__].position}"
                                            required="required"
                                            th:attr="data-required-errormessage=#{validation.assessorprofileappointmentform.position.required}" />
@@ -272,6 +282,8 @@
                                     </label>
                                     <input aria-labelledby="aria-family-rel" class="form-control width-full family-affiliation-field"
                                            th:errorclass="form-control-error" type="text"
+                                           th:id="familyAffiliations[__${familyAffiliationStat.index}__].relation"
+                                           th:name="familyAffiliations[__${familyAffiliationStat.index}__].relation"
                                            th:field="*{familyAffiliations[__${familyAffiliationStat.index}__].relation}"
                                            required="required"
                                            th:attr="data-required-errormessage=#{validation.assessorprofilefamilyaffiliationform.relation.required}" />
@@ -286,6 +298,8 @@
                                     </label>
                                     <input aria-labelledby="aria-family-org" class="form-control width-full family-affiliation-field"
                                            th:errorclass="form-control-error" type="text"
+                                           th:id="familyAffiliations[__${familyAffiliationStat.index}__].organisation"
+                                           th:name="familyAffiliations[__${familyAffiliationStat.index}__].organisation"
                                            th:field="*{familyAffiliations[__${familyAffiliationStat.index}__].organisation}"
                                            required="required"
                                            th:attr="data-required-errormessage=#{validation.assessorprofilefamilyaffiliationform.organisation.required}" />
@@ -301,6 +315,8 @@
 
                                     <input aria-labelledby="aria-family-pos" class="form-control width-full family-affiliation-field"
                                            th:errorclass="form-control-error" type="text"
+                                           th:id="familyAffiliations[__${familyAffiliationStat.index}__].position"
+                                           th:name="familyAffiliations[__${familyAffiliationStat.index}__].position"
                                            th:field="*{familyAffiliations[__${familyAffiliationStat.index}__].position}"
                                            required="required"
                                            th:attr="data-required-errormessage=#{validation.assessorprofilefamilyaffiliationform.position.required}" />
@@ -379,7 +395,8 @@
                         </legend>
 
                         <div class="multiple-choice">
-                            <input type="checkbox" th:field="*{accurateAccount}"
+                            <input type="checkbox"
+                                   th:field="*{accurateAccount}"
                                    required="required"
                                    th:attr="data-required-errormessage=#{validation.assessorprofiledeclarationform.accurateAccount.required}" />
                             <label th:for="${#ids.prev('accurateAccount')}">
