--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-panel-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-panel-find.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Invite assessors to panel'"/>
+    <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Assign applications to panel'"/>
 </head>
 
-<body th:with="context='comp-management'" class="competition-management competition-overview invite-assessors">
+<body th:with="context='comp-management'" class="competition-management competition-overview invite-applications">
 <th:block th:insert="fragments/layout :: body-start"/>
 <th:block th:insert="fragments/layout :: global-header"/>
 
@@ -16,29 +16,28 @@
     <th:block th:insert="fragments/layout :: page-title"
               th:with="pageTitle='Assign applications to interview panel',subTitle=${model.competitionId + ': ' + model.competitionName},size='heading-xlarge'"/>
 
-    <div><br></div>
+    <dl class="standard-definition-list extra-margin">
+        <dt>Innovation sector</dt>
+        <dd th:text="${model.innovationSector}">Health and life sciences</dd>
 
+        <dt>Innovation area</dt>
+        <dd th:text="${model.innovationArea}">Agriculture and food</dd>
+    </dl>
+
+    <div><br></div>
     <ul class="inline-nav">
         <li class="selected">
-            <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/find(competitionId=${model.competitionId})}">Find</a>
+            <a th:href="@{/assessment/interview-panel/competition/{competitionId}/applications/find(competitionId=${model.competitionId})}">Find</a>
         </li>
         <li class="not-selected">
-            <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/invite(competitionId=${model.competitionId})}">Invite</a>
+            <a th:href="@{/assessment/interview-panel/competition/{competitionId}/applications/invite(competitionId=${model.competitionId})}">Invite</a>
         </li>
+        <!-- /*
         <li class="not-selected">
-            <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/overview(competitionId=${model.competitionId})}">Pending and rejected</a>
+            <a th:href="@{/assessment/interview-panel/competition/{competitionId}/applications/overview(competitionId=${model.competitionId})}">View status</a>
         </li>
-        <li class="not-selected">
-            <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/accepted(competitionId=${model.competitionId})}">Accepted</a>
-        </li>
+        */ -->
     </ul>
-
-    <div class="grid-row">
-        <div class="column-three-quarters">
-            <h2 class="heading-small no-margin-top">Find registered assessors. Add them to the invite list using the checkboxes.</h2>
-            <br>
-        </div>
-    </div>
 
     <div class="warning-alert extra-margin-bottom" th:if="${model.selectAllDisabled}">
         <p th:text="#{competition.management.limit.warning}"></p>
@@ -48,13 +47,13 @@
     <div class="grid-row sorting">
         <div class="column-one">
             <span class="heading-xlarge no-margin" th:text="${model.pagination.totalCount}">20</span>
-            <span class="heading-small">assessors</span>
+            <span class="heading-small">applications</span>
         </div>
     </div>
 
     <form method="POST"
-          th:action="@{/assessment/panel/competition/{competitionId}/assessors/find/addSelected(competitionId=${model.competitionId})}"
-          th:object="${assessorPanelSelectionForm}"
+          th:action="@{/assessment/interview-panel/competition/{competitionId}/applications/find/addSelected(competitionId=${model.competitionId})}"
+          th:object="${interviewPanelApplicationSelectionForm}"
           data-multipage-select=""
           th:attr="data-total-checkboxes=${model.pagination.totalCount}">
 
@@ -64,18 +63,18 @@
                     <input type="checkbox"
                            data-select-all=""
                            id="select-all-check"
-                           th:checked="${assessorPanelSelectionForm.getAllSelected()}"
+                           th:checked="${interviewPanelApplicationSelectionForm.getAllSelected()}"
                            th:disabled="${model.selectAllDisabled || model.pagination.totalCount == 0}"/>
                     <label for="select-all-check">
                         Select all applications
                     </label>
                 </div>
                 <span class="form-hint">
-                    <span data-count-selected="" th:text="${#lists.size(assessorPanelSelectionForm.selectedIds)}"></span> applications selected
+                    <span data-count-selected="" th:text="${#lists.size(interviewPanelApplicationSelectionForm.selectedIds)}"></span> applications selected
                 </span>
             </div>
             <div class="column-half select-all alignright">
-                <button class="button" name="addSelected" data-submit-el="" th:attr="disabled=${#lists.isEmpty(assessorPanelSelectionForm.selectedIds)}">
+                <button class="button" name="addSelected" data-submit-el="" th:attr="disabled=${#lists.isEmpty(interviewPanelApplicationSelectionForm.selectedIds)}">
                     Add selected to invite list
                 </button>
             </div>
@@ -85,9 +84,10 @@
             <table>
                 <thead>
                 <tr>
-                    <th scope="col">Select application</th>
-                    <th scope="col">Application</th>
+                    <th scope="col">Select</th>
+                    <th scope="col" class="width-small">Application number</th>
                     <th scope="col">Project title</th>
+                    <th scope="col">Lead organisation</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -104,12 +104,15 @@
                         </div>
                     </td>
                     <td>
-                        <a th:href="@{/competition/{competitionId}/assessors/profile/{assessorId}(competitionId=${model.competitionId},assessorId=${app.id})} + ${originQuery}"
+                        <a th:href="@{/competition/{competitionId}/application/{appId}(competitionId=${model.competitionId},appId=${app.id})} + ${originQuery}"
                            th:text="${app.id}">123
                         </a>
                     </td>
                     <td>
                         <span th:text="${app.name}">project name</span>
+                    </td>
+                    <td>
+                        <span th:text="${app.leadOrganisation}">Lead organisation</span>
                     </td>
                 </tr>
                 <tr th:if="${#lists.isEmpty(model.applications)}">
